# flrt

./: .gitignore  LICENSE  README.md  demo.ipynb  pyproject.toml
flrt/: attack.py  finetune.py  internal.py  judge.py  modal_defs.py  modal_download.py  objective.py  operators.py  templates.py  translate.py  util.py  victim.py
