[tool.poetry]
name = "flrt"
version = "0.0.1"
description = "Fluent student-teacher redteaming"
license = "MIT"
authors = ["Confirm Labs <ben.thompson@confirmsol.org>"]
maintainers = []
keywords = []
classifiers = []

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"